testdata/golden/sema/invalid/relative_import_explicit_module_same_name/caller/main.fmt
import ./actual/chess::initial_game;

fn use_game() -> int {
    return initial_game();
}
